--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon index",
+    "start": "npx sequelize db:migrate && node index.js"
   },
   "author": "",
   "license": "ISC",
